; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_tsgistidx.c_makesign.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_tsgistidx.c_makesign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32*)* @makesign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @makesign(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @ARRNELEM(i32* %8)
  store i64 %9, i64* %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i64* @GETARR(i32* %10)
  store i64* %11, i64** %7, align 8
  %12 = load i64, i64* %3, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = call i32 @MemSet(i8* %13, i32 0, i32 4)
  store i64 0, i64* %5, align 8
  br label %15

15:                                               ; preds = %26, %2
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %29

19:                                               ; preds = %15
  %20 = load i64, i64* %3, align 8
  %21 = load i64*, i64** %7, align 8
  %22 = load i64, i64* %5, align 8
  %23 = getelementptr inbounds i64, i64* %21, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @HASH(i64 %20, i64 %24)
  br label %26

26:                                               ; preds = %19
  %27 = load i64, i64* %5, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %5, align 8
  br label %15

29:                                               ; preds = %15
  ret void
}

declare dso_local i64 @ARRNELEM(i32*) #1

declare dso_local i64* @GETARR(i32*) #1

declare dso_local i32 @MemSet(i8*, i32, i32) #1

declare dso_local i32 @HASH(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
